--- a/css/styles.css
+++ b/css/styles.css
@@ -34,16 +34,19 @@ img {
 
 
 .container {
-    max-width: 1158px;
-    padding: 0 15px;
-    margin: 0 auto;
+    /* max-width: 1158px; */
+    max-width: 320px;
+    /* padding: 0 15px; */
+    padding-left:  16px;
+    padding-right: 16px;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
 .section {
     margin: 0;
-    margin-bottom: 0;
-    padding: 120px 0;
+    padding: 96px 0;
 }
 
 /* Header */
@@ -58,7 +61,8 @@ img {
 .header-container {
     display: flex;
     align-items: center;
-
+    justify-content: space-between;
+    
 }
 
 .navigation {
@@ -69,8 +73,7 @@ img {
 }
 
 .nav-list {
-    display: flex;
-    gap: 40px;
+    display: none;
 }
 
 .logo {
@@ -82,9 +85,11 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    margin-right: 76px;
+    /* padding-top: 24px;
+    padding-bottom: 24px; */
+    /* margin-right: 76px; */
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 .logo-studio {
     font-family: "Raleway",
@@ -96,75 +101,128 @@ img {
     text-transform: uppercase;
     color: #2E2F42;
 }
-.menu-link {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-    display: block;
-    padding: 24px 0 24px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.menu-link:hover , .menu-link:focus {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
-    color: #404BBF;
-}
-.current {
-    position: relative;
-    color: #404bbf;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-}
-.current::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    border-radius: 2px;
-    width: 100%;
-    height: 4px;
-    background-color: #404bbf;
-    
-}
 
 
 .contacts {
     font-style: normal;
-    padding-left: 156px;
-    display: flex;
-    gap: 40px;
     margin-left: auto;
-    
+    display: none;
 }
 
 .contacts-list {
-    display: flex;
+    /* display: flex;
     gap: 40px;
-    padding: 24px 0 24px;
+    padding: 24px 0 24px; */
 }
 
-.contacts-link {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
+
+
+.open-menu-btn {
+    padding: 0;
+    line-height: 0;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+/* --------------------Mobil menu modal------------- */
+.mob-modal{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    background-color: #fff;
+    padding: 72px  16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+.mob-modal.is-open {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+}
+.mob-open-btn {
+position: absolute;
+display: flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+border-radius: 100%;
+background-color: #E7E9FC;
+border: 1px solid rgba(0, 0, 0, 0.1);
+top: 24px;
+right: 24px;
+width: 24px;
+height: 24px;
+fill: #2E2F42;
+
+}
+.mobile-menu {
+max-width: 151px;
+
+}
+.mobile-menu-wrap{
+    margin-bottom: 168px;
+}
+.mobile-nav-list {
+display: flex;
+flex-direction: column;
+gap: 40px;
+}
+.mob-menu-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    
+}
+.mob-menu-link:hover ,
+.mob-menu-link:focus {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
+    letter-spacing: 0.02em;
+    color: #404bbf;
+}
+.mobile-contacts {
+font-style: normal;
+margin-bottom: 48px;
+}
+.mobile-contacts-list {
+display: flex;
+flex-direction: column;
+gap: 24px;
+}
+.mob-contacts-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 120%;
     letter-spacing: 0.02em;
     color: #434455;
-    font-style: normal;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts-link:hover , 
-.contacts-link:focus {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
+.mob-contacts-link :hover ,
+.mob-contacts-link:focus {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 120%;
     letter-spacing: 0.02em;
-    color: #404BBF;
-    font-style: normal;
+    color: #4d5ae5;
+}
+
+.mobile-social {
+
+}
+.mobile-icon-list {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
 }
 
 /* Main */
@@ -173,12 +231,14 @@ img {
 
 .title {
     font-weight: 700;
-    font-size: 56px;
-    line-height: 107%;
+    font-size: 36px;
+    line-height: 111%;
     letter-spacing: 0.02em;
+    /* font-size: 56px;
+    line-height: 107%; */
     text-align: center;
     color: #ffffff;
-    margin: 0 auto;
+    
     max-width: 496px;
     margin: 0 auto 48px auto;
     
@@ -187,12 +247,16 @@ img {
 .hero-image {
     background: #2E2F42;
     text-align: center;
-    padding: 188px 0; 
+    
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     background-repeat: no-repeat;
-    max-width: 1440px;
+    /* max-width: 1440px; */
+    min-width: 320px;
+    padding: 72px 0;
+    
     background-position: center;
     background-size: cover;
+    display: flex;
     margin: 0 auto;
     color: #ffffff;
 }
@@ -215,22 +279,15 @@ img {
     
 }
 
-.button:hover , .button:focus {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    background-color: #404BBF;
-    cursor: pointer;
-}
+
 
 /* Section 1 */
 .feature {
     display: flex;
-    flex-direction: row;
-    gap: 24px;
+    flex-wrap: wrap;
+    /* flex-direction: row; */
+    /* gap: 24px; */
+    gap: 72px;
     
     }
 
@@ -248,11 +305,13 @@ img {
 }
 
 .feature-list {
-    width: calc(100% - 72px / 4);
-}
+    width: 100%;
+    /* width: calc(100% - 72px / 4); */
+} 
 
 .icon-feature-wrap {
-    display: flex;
+    display: none;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     height: 112px;
@@ -265,20 +324,21 @@ img {
     
 }
 .feature-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 120%;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
     letter-spacing: 0.02em;
-    color: #2E2F42;
+    text-align: center;
+    color: #2e2f42;
     margin-bottom: 8px;
 }
 
 .feature-text {
-    font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-}
+    font-weight: 500;
+    }
 
 /* Section 2 */
 
@@ -297,18 +357,21 @@ img {
 
 .our-team {
     background-color: #F4F4FD;
-
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
 .our-team-list {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    /* gap: 24px;  */
+    gap: 72px;
 }
 
 
 .our-team-item {
     background: #ffffff;
-    width: calc(100% - 72px / 4);
+    /* width: calc(100% - 72px / 4); */
     border-radius: 0 0 4px 4px;
     box-shadow: 0 2px 1px 0 
     rgba(46, 47, 66, 0.08), 0 1px 1px 0 
@@ -319,6 +382,7 @@ img {
 
 .our-team-image {
     margin: 0 auto;
+    width: 100%;
 }
 
 .card-content-team {
@@ -358,20 +422,18 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.icon-link-our-team:hover,
-.icon-link-our-team:focus {
-    background-color: #404bbf;
-    
-}
+
 /* Section 3 */
 
 .portfolio {
     background: #ffffff;
-    padding-bottom: 120px;
-    padding-top: 120px;
+    padding-bottom: 96px;
+    padding-top: 96px;
+    /* padding-bottom: 120px;
+    padding-top: 120px; */
 }
 
 .portfolio-title {
@@ -388,12 +450,13 @@ img {
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 48px 24px;
+    gap: 48px;
+    /* gap: 48px 24px; */
 }
 
 .portfolio-item {
-    width: calc((100% - 24px * 2) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* width: calc((100% - 24px * 2) / 3); */
+    /* transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .portfolio-cover-wrap {
@@ -429,7 +492,7 @@ transform: translateY(0);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+} 
 
 
 .portfolio-image {
@@ -460,16 +523,23 @@ transform: translateY(0);
 }
 .footer .container {
     display: flex;
+    flex-wrap: wrap;
     align-items: baseline;
+    
+    justify-content: center;
 }
 .footer-section {
-    margin-right: 120px;
+    
+    margin-bottom: 72px;
+    
+    
 }
 .footer-logo {
-display: inline-block;
-padding: 0;
-margin-right: 0;
-margin-bottom: 16px;
+
+display: flex;
+align-items: center;
+justify-content: center;
+
 }
 
 .logo-studio-footer {
@@ -489,9 +559,12 @@ margin-bottom: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #F4F4FD;
+    
     max-width: 264px;
 }
-
+.social {
+    margin-bottom: 72px;
+}
 .social-name {
     color: #ffffff;
     margin-bottom: 16px;
@@ -499,19 +572,24 @@ margin-bottom: 16px;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-    margin-bottom: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .icon-list {
     display: flex;
     gap: 16px;
-    
+    padding-left: 0px;
+    padding-right: 0px;
+    justify-content: center;
+    align-items: center;
 }
 
 .icon-item {
     width: 40px;
     height: 40px;
-    
 }
 
 .icon-link {
@@ -536,13 +614,13 @@ margin-bottom: 16px;
 
 .footer-subscribe-wrap {
     margin-left: auto;
+    max-width: 288px;
 }
 .footer-subscribe {
     display: flex;
     align-items: center;
     gap: 24px;
-    
-
+    flex-direction: column;
 }
 
 .footer-input {
@@ -557,6 +635,7 @@ margin-bottom: 16px;
     letter-spacing: 0.04em;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     color: #ffffff;
+    opacity: 0.3;
 }
 
 .footer-input::placeholder {
@@ -569,8 +648,8 @@ margin-bottom: 16px;
 .footer-button {
     font-family: "Roboto", sans-serif;
     cursor: pointer;
-    
     display: flex;
+    
     align-items: center;
     justify-content: center;
     font-weight: 500;
@@ -615,30 +694,32 @@ margin-bottom: 16px;
     background-color: rgba(46, 47, 66, 0.4);;
     z-index: 999;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    opacity: 0;
+    /* opacity: 0;
     pointer-events: none;
-    visibility: hidden; 
+    visibility: hidden;  */
     
 }
 
 .modal {
     background-color: #fcfcfc;
     position: absolute;border-radius: 4px;
-    width: 408px;
-    min-height: 584px;
+    /* width: 408px; */
+    width: 288px;
+    min-height: 623px;
+    /* min-height: 584px; */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 24px 16px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     overflow-y: auto;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open {
-    opacity: 1;
+    opacity: 1; 
     pointer-events: auto;
-    visibility: visible;
-}
+    visibility: visible; 
+} 
 
 
 .modal-open-btn {
@@ -760,12 +841,15 @@ margin-bottom: 8px;
 }
 
 .modal-field-check {
+    display: flex;
+    align-items: center;
     margin-bottom: 24px;
+
 }
 
 
 .modal-check span{
-
+flex-shrink: 0;
 }
 .check-text {
     font-weight: 400;
@@ -773,7 +857,7 @@ margin-bottom: 8px;
     line-height: 117%;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    
+    width: 100%;  
 }
 
 .modal-check:focus + .check-text span {
@@ -819,3 +903,333 @@ margin-bottom: 8px;
 .check-button {
     
 }
+
+@media screen and (min-width: 768px) {
+.container {
+    max-width: 768px;
+    }
+
+        /* ----------------------- Header --------------------- */
+.open-menu-btn {
+    display: none;
+}
+.logo {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    margin-right: 120px;
+}
+.nav-list {
+    display: flex;
+    gap: 40px;
+}
+.menu-link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    display: block;
+    padding: 24px 0 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-link:hover,
+.menu-link:focus {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #404BBF;
+}
+
+.current {
+    position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+}
+.contacts {
+    display: block;
+}
+.contacts-list{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.contacts-link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: #434455;
+    font-style: normal;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contacts-link:hover , 
+.contacts-link:focus {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #404BBF;
+    font-style: normal;
+}
+.mob-modal {
+    display: none;
+}
+/* -----------------Hero image-------------------------- */
+.hero-image {
+    max-width: 768px;
+    padding: 112px 0;
+}
+.title {
+    font-size: 56px;
+    line-height: 107%;
+    
+}
+
+
+    /*--------------------- section 1------------------------- */
+.feature {
+    display: flex;
+    flex-direction: row;
+    gap: 72px 24px;
+    }
+.feature-list {
+    width: calc((100% - 24px) / 2);
+    }
+    /*---------------------- section 2 ------------------------*/
+.our-team-wrap {
+    width: 584px;
+}
+    .our-team-list {
+    display: flex;
+    flex-direction: row;
+    gap: 64px 24px;
+    }
+
+/*---------------------- section 3-------------------------*/
+.portfolio-list {
+display: flex;
+    flex-direction: row;
+    gap: 72px 24px;
+}
+.portfolio-item {
+    width: calc((100% - 24px) / 2);
+}
+/*------------------------ Footer------------------ */
+.footer .container{
+    justify-content: start;
+}
+.footer-section {
+    padding-left: 108px;
+    padding-right: 24px;
+    
+}
+.footer-logo{
+    display: inline-block;
+    
+    padding-bottom: 16px;
+    
+}
+.social-name {
+    align-items: start;
+}
+.footer-subscribe-wrap {
+    
+    padding-left: 108px;
+    margin: 0;
+}
+.footer-subscribe {
+    flex-direction: row;
+}
+/* ------------Checkbox--------------- */
+
+.modal{
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
+}
+.check-text {
+    
+
+}
+
+}
+
+
+
+
+@media screen and (min-width: 1158px) {
+.container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    }
+.section {
+padding: 120px 0;
+    }
+         /* ----------------------- Header --------------------- */
+.header-container{
+    justify-content: center;
+}
+.logo {
+    margin-right: 76px;
+}
+
+.contacts {
+    font-style: normal;
+    padding-left: 156px;
+    display: flex;
+    gap: 40px;
+    margin-left: auto;
+}
+.contacts-list {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    padding: 24px 0 24px; 
+}
+.contacts-link {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #434455;
+    font-style: normal;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-link:hover,
+.contacts-link:focus {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #404BBF;
+    font-style: normal;
+}
+/* -----------------Hero image-------------------------- */
+.hero-image {
+    max-width: 1440px;
+    padding: 188px 0;
+}
+.button:hover,
+.button:focus {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    background-color: #404BBF;
+    cursor: pointer;
+}
+
+/*--------------------- section 1 --------------------*/
+.feature {
+    gap: 24px;
+    }
+.feature-list {
+    width: calc((100% - 72px) / 4);
+    }
+.icon-feature-wrap {
+    display: flex;
+    }
+.feature-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 120%;
+    letter-spacing: 0.02em;
+    }
+.feature-text {
+    font-weight: 400;
+    }
+        /*-------------- section 2-------------- */
+.our-team-wrap {
+    width: 100%;
+}
+
+        .our-team-list {
+        display: flex;
+        gap: 24px;
+    }
+.our-team-item {
+    width: calc((100% - 72px) / 4);
+}
+
+.icon-link-our-team{
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-link-our-team:hover,
+.icon-link-our-team:focus {
+    background-color: #404bbf;
+
+}
+/*---------------------- section 3---------------------*/
+
+.portfolio {
+    padding-bottom: 120px;
+    padding-top: 120px;
+}
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+}
+.portfolio-item {
+    width: calc((100% - 24px * 2) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+.portfolio-cover-text {
+transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-item:hover .portfolio-cover-text {
+    transform: translateY(0);
+
+}
+
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+/*------------------------ Footer------------------ */
+.footer .container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: baseline;
+}
+.footer-section {
+    margin-right: 120px;
+    align-items: start;
+    padding: 0;
+}
+.footer-logo {
+    
+}
+.footer-subscribe-wrap {
+    
+}
+.footer-subscribe{
+    margin-left: auto;
+}
+.footer-input{
+    opacity: inherit;
+}
+}
+
