--- a/css/styles.css
+++ b/css/styles.css
@@ -234,31 +234,32 @@ gap: 24px;
     font-size: 36px;
     line-height: 111%;
     letter-spacing: 0.02em;
-    /* font-size: 56px;
-    line-height: 107%; */
     text-align: center;
     color: #ffffff;
-    
     max-width: 496px;
     margin: 0 auto 48px auto;
-    
 }
 
 .hero-image {
     background: #2E2F42;
     text-align: center;
-    
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile/mobDark-bg1x-min.jpg);
     background-repeat: no-repeat;
-    /* max-width: 1440px; */
     min-width: 320px;
     padding: 72px 0;
-    
     background-position: center;
     background-size: cover;
     display: flex;
     margin: 0 auto;
     color: #ffffff;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 2dppx),
+(min-resolution: 2dpi) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile/mobDark-bg2x-min.jpg);
+    }
 }
 
 .button {
@@ -694,9 +695,9 @@ justify-content: center;
     background-color: rgba(46, 47, 66, 0.4);;
     z-index: 999;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /* opacity: 0;
+    opacity: 0;
     pointer-events: none;
-    visibility: hidden;  */
+    visibility: hidden; 
     
 }
 
@@ -998,16 +999,23 @@ margin-bottom: 8px;
     display: none;
 }
 /* -----------------Hero image-------------------------- */
-.hero-image {
-    max-width: 768px;
-    padding: 112px 0;
-}
 .title {
     font-size: 56px;
     line-height: 107%;
     
 }
-
+.hero-image {
+    min-width: 768px;
+    padding: 112px 0;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet/Dark-bg1x-min.jpg);
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 2dppx),
+(min-resolution: 2dpi) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet/Dark-bg2x-min.jpg);
+    }
+}
 
     /*--------------------- section 1------------------------- */
 .feature {
@@ -1137,6 +1145,14 @@ padding: 120px 0;
 .hero-image {
     max-width: 1440px;
     padding: 188px 0;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 2dppx),
+(min-resolution: 2dpi) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    }
 }
 .button:hover,
 .button:focus {
